# lungmil-results

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  redirect_url.txt  requirements.txt  train_mm_abmil_v7.py  train_mm_abmil_v8.py  train_pretrain.py
analysis/: CLAUDE.md  acr_episode_analysis.py  aggregate_predictions.py  analyze_acr.py  analyze_surv_endpoints.py  analyze_v7_endpoints_full.py  analyze_v7_full.py  compare_modalities.py  compute_benchmark_extended.py  extract_clinical_features.py  extract_cluster_names.py  extract_cluster_proportions.py  extract_predictions.py  generate_patient_plots.py  nature_fig0_hero.py  nature_figs_all.py  plot_benchmark_chicago.py  plot_benchmark_figures.py  plot_benchmark_table.py  plot_linear_benchmarks.py  plot_modality_comparison.py  plot_paper_interpretability.py  plot_test_metrics_boxplot.py  reeval_slot_mega.py  submit_analysis.sh  submit_analyze_endpoints_full.sh  submit_analyze_surv_endpoints.sh  submit_benchmark_extended.sh  submit_benchmark_figures.sh  submit_benchmark_table.sh  submit_compare_modalities.sh  submit_extract_clinical.sh  submit_extract_predictions.sh  submit_hero_fig.sh  submit_linear_benchmarks.sh  submit_linear_models.sh  submit_nature_figs_all.sh  submit_paper_interpretability.sh  submit_reeval_slot_mega.sh  submit_test_metrics_boxplot.sh  (+1 more)
benchmarks/: collect_tcga_benchmark.sh  collect_tcga_multitask_results.py  convert_splits.sh  inspect_external_gbmlgg.sh  inspect_external_models.sh  prep_lung_benchmark.sh  submit_gbmlgg_benchmark.sh  submit_lung_benchmark.sh  submit_mcat_benchmark.sh  (+12 more)
(+258 files in other folders)
