[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mil"
version = "0.1.0"
description = "Multimodal MIL for lung transplant ACR / CLAD / Death prediction"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
analysis = ["umap-learn>=0.5", "lifelines>=0.27"]
dev      = ["pytest>=7.4", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
